--- a/css/public.css
+++ b/css/public.css
@@ -20,7 +20,10 @@ body {
   height: 11%;
   background-color: #fff;
   position: fixed;
-  z-index: 500; }
+  z-index: 500;
+  -webkit-box-shadow: 1px 0 20px #d2d2d2;
+  -moz-box-shadow: 1px 0 20px #d2d2d2;
+  box-shadow: 1px 0 20px #d2d2d2; }
   .header .container .header-wrap .logo {
     float: left;
     margin-right: 15%; }
