--- a/css/public.scss
+++ b/css/public.scss
@@ -21,6 +21,9 @@ body{
   background-color: #fff;
   position: fixed;
   z-index: 500;
+  -webkit-box-shadow: 1px 0 20px #d2d2d2;
+  -moz-box-shadow: 1px 0 20px #d2d2d2;
+  box-shadow: 1px 0 20px #d2d2d2;
   .container{
     .header-wrap{
       .logo{
